# NyayMitra

./: .gitignore  README.md
client/: package-lock.json  package.json
client/src/: App.jsx  index.css  main.jsx
client/src/components/: Navbar.jsx  Sidebar.jsx
client/src/lib/: api.js
client/src/pages/: ChatPage.jsx
server/: .env.example  api.py  chains.py  main.py  migrate.py  pyproject.toml  requirements.txt  supabase_history.py  test.ipynb
